envoy.yaml
static_resources:
    listeners:
      - name: listener_0
        address: 
          socket_address:
            address: 0.0.0.0
            port_value: 3000
        filter_chains: 
          - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config: 
               "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
               stat_prefix: edge
               http_filters:
                - name: envoy.filters.http.wasm
                  typed_config:
                    "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                    type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                    value:
                      config:
                        name: "my_plugin"
                        root_id: "my_root_id"
                        configuration:
                          "@type": "type.googleapis.com/google.protobuf.StringValue"
                          value: |
                            {}
                        vm_config:
                          runtime: "envoy.wasm.runtime.v8"
                          vm_id: "my_vm_id"
                          code:
                            local:
                              filename: "./optimized.wasm"
                          configuration: { }
                - name: envoy.filters.http.router
               route_config:
                 virtual_hosts:
                   - name: direct_response
                     domains: ["*"]
                     routes:
                      - match: 
                          prefix: "/"
                        direct_response: 
                          status: 200
                          body:
                            inline_string: "BRUHHH"
